Corrigindo banner admin

--- a/public/admin.css
+++ b/public/admin.css
@@ -61,7 +61,8 @@ body {
   }
   
   .banners-container img {
-    width: 50px;
+    width: 100px;
+    height: 250px;
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   }
