--- a/public/admin.css
+++ b/public/admin.css
@@ -61,7 +61,7 @@ body {
   }
   
   .banners-container img {
-    width: 100px;
+    width: 100%;
     height: 250px;
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
