--- a/public/admin.css
+++ b/public/admin.css
@@ -63,6 +63,7 @@ body {
   .banners-container img {
     width: 100%;
     height: 250px;
+    display: block;
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
   }
